2011-08-24  Iain Merrick  <husky@google.com>

        [chromium] Don't call glDeleteTexture(0) in TextureManager
        https://bugs.webkit.org/show_bug.cgi?id=66862

        Delete(0) is allowed in standard OpenGL, but not in Chrome.
        See http://code.google.com/p/chromium/issues/detail?id=85268

        Reviewed by James Robinson.

        * platform/graphics/chromium/TextureManager.cpp:
        (WebCore::TextureManager::deleteEvictedTextures):

2011-08-24  Adrienne Walker  <enne@google.com>

        [chromium] Properly initialize CCTiledLayerImpl::m_skipsDraw
        https://bugs.webkit.org/show_bug.cgi?id=66889

        Reviewed by James Robinson.

        * platform/graphics/chromium/cc/CCTiledLayerImpl.cpp:
        (WebCore::CCTiledLayerImpl::CCTiledLayerImpl):

2011-08-24  Tom Sepez  <tsepez@chromium.org>

        chromium WebFrameImpl - don't load javascript URLs against chrome internal
        pages.  Adds a mechanism for registering sensitive schemes which should 
        not be subject to manipulation by javascript urls typed into a location bar
        or, more importantly, their bookmarklet equivalents.
        https://bugs.webkit.org/show_bug.cgi?id=66720

        Reviewed by Adam Barth.

        Test: Chromium WebKit API unit test in chromium specific directory.
        
        * platform/SchemeRegistry.cpp:
        (WebCore::notAllowingJavascriptURLsSchemes):
        (WebCore::SchemeRegistry::registerURLSchemeAsNotAllowingJavascriptURLs):
        (WebCore::SchemeRegistry::shouldTreatURLSchemeAsNotAllowingJavascriptURLs):
        * platform/SchemeRegistry.h:

2011-08-24  Alexandru Chiculita  <achicu@adobe.com>

        [CSSRegions] Fix Element::getBoundingClientRect and Element::getClientRects for content flow
        https://bugs.webkit.org/show_bug.cgi?id=66641

        Original author of the patch is Mihnea Ovidenie <mihnea@adobe.com>.

        Redirected the mapLocalToContainer method to the appropriate RenderRegion.
